--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <span>Tyler's point of view:</span>
           <p>I was just visiting my close friends, Kim and TJ, when Kim brought up that
             she had a cousin who was single. She then showed me a picture of
-            her and I said, "She's hot and you know, Midland is right next door. Plus blondes are
+            her and I said, "She's pretty hot and, well, Midland isn't too far away... Plus blondes are
             the big leagues." Then, fearing a long-distance relationship, I had second
             thoughts.<br>The night before I was about to leave St. George, I spent the night
             playing cards with Vicki and her family, and she didn't mind that I was cheating.
