--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <span><a href="#photopage">Photos</a></span>
         <span><a href="#locationpage">Location</a></span>
         <span><a href="#infopage">Information</a></span>
-        <span><a href="#registrypage">Resgistry</a></span>
+        <span><a href="#registrypage">Registry</a></span>
         <span><a href="#rsvppage">RSVP</a></span>
 
       </div>
